# automata-position-conductor-binance

./: .env  Dockerfile  README.md  requirements.txt  setup.cfg
.github/workflows/: docker-container-build.yml  release.yml
.scripts/: namespace_info.py  release_indicator.py  repository_info.py  tag_info.py  tag_release_indicator.py
binanceposition/: __main__.py
binanceposition/arguments/: command_line_arguments.py
binanceposition/conductor/: BinancePositionConductor.py
binanceposition/provider/supplier/: BinancePositionSupplier.py
conductor/: BinancePositionConductor.py  __main__.py
conductor/provider/supplier/: BinancePositionSupplier.py
simulation/fetchdata/: __init__.py
simulation/positionsimulation/: __init__.py
simulation/runprofile/: __init__.py
