[metadata]
name = persuader-technology-automata-position-binance
version = 0.0.2
description = Automata Binance Position 
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    binance-connector==1.11.0
    persuader-technology-automata-position==0.0.4

[options.packages.find]
include = binanceposition*
exclude =
    tests
    simulations
    .scripts
