[metadata]
name = persuader-technology-automata-position-conductor-binance
version = 0.1.4
description = Automata Binance Position Conductor
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    binance-connector==1.11.0
    persuader-technology-automata-core>=0.5.1
    persuader-technology-automata-utilities>=0.1.1
    persuader-technology-automata-redis>=0.2.1
    persuader-technology-automata-process-manager>=0.1.6
    persuader-technology-automata-position>=0.1.1
    persuader-technology-automata-auth>=0.1.0

[options.packages.find]
include = conductor*
exclude =
    tests
    simulations
    .scripts

[options.entry_points]
console_scripts =
    automata-binance-position-conductor-start = conductor.__main__:start
